# pydantic-cidoc-crm

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
model/: abstract_basemodel.py  cidoc_crm.py
pydantic_cidoc_crm/: __init__.py  cidoc_crm.py  mapping.py
