[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pydantic_cidoc_crm"
author = "Jonas Engelmann"
author-email = "jonas.engelmann@protonmail.com"
home-page = "https://github.com/jonasengelmann/pydantic-cidoc-crm"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
requires = [
    "pydantic",
    "rdflib",
]
description-file = "README.md"
requires-python = ">=3.6.1"

[tool.flit.metadata.urls]
Documentation = "https://github.com/jonasengelmann/pydantic-cidoc-crm"

[tool.flit.metadata.requires-extra]
dev = [
    "pre-commit==2.20.0",
]
